force-app/main/default/objects/public_rebates__x/public_rebates__x.object-meta.xml
<CustomObject>
    <description>public$rebates</description>
    <externalDataSource>RebateSystem</externalDataSource>
    <externalName>public$rebates</externalName>
    <label>public$rebates</label>
    <pluralLabel>public$rebates</pluralLabel>
</CustomObject>