force-app/main/default/objects/public_rebates__x/fields/orderid__c.field-meta.xml
<CustomField>
    <fullName>orderid__c</fullName>
    <description>orderid</description>
    <externalDeveloperName>orderid</externalDeveloperName>
    <label>orderid</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>