force-app/main/default/objects/public_rebates__x/fields/program__c.field-meta.xml
<CustomField>
    <fullName>program__c</fullName>
    <description>program</description>
    <externalDeveloperName>program</externalDeveloperName>
    <label>program</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>