force-app/main/default/objects/public_rebates__x/fields/received__c.field-meta.xml
<CustomField>
    <fullName>received__c</fullName>
    <description>received</description>
    <externalDeveloperName>received</externalDeveloperName>
    <label>received</label>
    <type>Date</type>
</CustomField>