force-app/main/default/objects/public_rebates__x/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <description>status</description>
    <externalDeveloperName>status</externalDeveloperName>
    <label>status</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>