force-app/main/default/objects/public_rebates__x/fields/supplierid__c.field-meta.xml
<CustomField>
    <fullName>supplierid__c</fullName>
    <description>supplierid</description>
    <externalDeveloperName>supplierid</externalDeveloperName>
    <label>supplierid</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>