force-app/main/default/objects/public_rebates__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>program__c</columns>
    <columns>orderid__c</columns>
    <columns>received__c</columns>
    <columns>status__c</columns>
    <columns>amount__c</columns>
    <columns>supplierid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>